# fastmask

./: .gitignore  LICENSE  README.md  evals.py  model.py  param_level_masking.py  pyproject.toml  tokenize_fineweb.py  train_gpt2.py  virology.txt
fastmask/: param_level_masking.py
fm/: model.py  param_level_masking.py
projects/gpt2/: dataloader.py  tokenize_fineweb.py  train_gpt2.py
projects/shared/: utils.py
projects/tinystories/: analyze_results.py  run_bulk.py  shared.py  tokenize_tinystories.py  train.py
tests/: test_param_level_masking.py  test_sanezip.py
