[project]
name = "fastmask"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jacob Goldman-Wetzler", email = "jacoblevgw@gmail.com"},
]
dependencies = ["torch>=2.5.1", "pandas>=2.2.3", "matplotlib>=3.10.0", "tqdm>=4.67.1", "wandb>=0.19.2", "transformers>=4.47.1", "dataclasses-json>=0.6.7", "datasets>=3.2.0", "ipykernel>=6.29.5", "einops>=0.8.0", "jaxtyping>=0.2.36", "python-dotenv>=1.0.1", "pytest>=8.3.4"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"